@@ -1,11 +1,11 @@
 README:  Tk
-    This is the Tk 8.5a3 source distribution.
+    This is the Tk 8.5a4 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
     link at the above URL.
 
-RCS: @(#) $Id: README,v 1.43 2004/12/11 00:00:19 dkf Exp $
+RCS: @(#) $Id: README,v 1.44 2005/06/07 14:20:16 dkf Exp $
 
 1. Introduction
 ---------------
