@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tk installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.108 2005/06/02 10:08:06 rmax Exp $
+# RCS: @(#) $Id: configure.in,v 1.109 2005/06/07 14:20:18 dkf Exp $
 
 AC_INIT([tk],[8.5])
 AC_PREREQ(2.57)
@@ -17,7 +17,7 @@ dnl AH_BOTTOM([#endif /* _TKCONFIG */])
 TK_VERSION=8.5
 TK_MAJOR_VERSION=8
 TK_MINOR_VERSION=5
-TK_PATCH_LEVEL="a3"
+TK_PATCH_LEVEL="a4"
 VERSION=${TK_VERSION}
 LOCALES="cs de el en en_gb es fr it nl ru"
 
