@@ -1,7 +1,7 @@
-# $Id: tk.spec,v 1.20 2004/12/11 00:00:22 dkf Exp $
+# $Id: tk.spec,v 1.21 2005/06/07 14:20:18 dkf Exp $
 # This file is the basis for a binary Tk Linux RPM.
 
-%define version 8.5a3
+%define version 8.5a4
 %define directory /usr/local
 
 Summary: Tk graphical toolkit for the Tcl scripting language.
@@ -14,7 +14,7 @@ Source: http://prdownloads.sourceforge.net/tcl/tk%{version}-src.tar.gz
 URL: http://www.tcl.tk/
 Packager: Carina
 Buildroot: /var/tmp/%{name}%{version}
-Requires: XFree86-libs >= 3.3.3, XFree86-devel >= 3.3.3, tcl = 8.5a3
+Requires: XFree86-libs >= 3.3.3, XFree86-devel >= 3.3.3, tcl = 8.5a4
 
 %description
 The Tcl (Tool Command Language) provides a powerful platform for
