@@ -1,3 +1,7 @@
+2005-06-07  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
+
+	Bump patchlevel to a4 to distinguish from a3 release.
+
 2005-06-04  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	*** 8.5a3 TAGGED FOR RELEASE ***
